--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,12 +107,13 @@ jobs:
 
           # 2. Update app.config.ts (Version + Bundle ID fix)
           # On remplace {{VERSION}} et on s'assure que ios possède un bundleIdentifier valide (pas d'underscore)
+          # Utilisation de com.clement-rayer.MK8DSB (avec tiret) au lieu de com.clement_rayer.MK8DSB
           if [[ "$OSTYPE" == "darwin"* ]]; then
             sed -i "" "s/{{VERSION}}/$VERSION/g" app.config.ts
-            # Injection d'un bundleIdentifier sans underscore (_) pour iOS
             sed -i "" "s/supportsTablet: true,/supportsTablet: true, bundleIdentifier: 'com.clement-rayer.MK8DSB',/g" app.config.ts
           else
             sed -i "s/{{VERSION}}/$VERSION/g" app.config.ts
+            sed -i "s/supportsTablet: true,/supportsTablet: true, bundleIdentifier: 'com.clement-rayer.MK8DSB',/g" app.config.ts
           fi
 
       - name: Android Version Code
